--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
+    "pug": "^3.0.2",
     "sass": "^1.52.2"
   },
   "devDependencies": {
